# url-threat-checker

./: .gitignore  CODE_REVIEW.md  Dockerfile  README.md  render.yaml  url-threat-project-junior-description.md
backend/: .env.example  README.md  pyproject.toml
backend/src/url_threat_checker/: __init__.py  auth.py  config.py  database.py  features.py  main.py  model.py  scanner.py  schemas.py  verdict.py  virustotal.py
backend/src/url_threat_checker/scripts/: create_submission_bundle.py  hash_password.py  reset_demo.py  seed_demo.py  setup_2fa.py  train_model.py  validate_virustotal.py
backend/src/url_threat_checker/telegram/: client.py  extraction.py  manage.py  replies.py  router.py  schemas.py  security.py  service.py
backend/tests/: test_api.py  test_features.py  test_model_behavior.py  test_telegram.py  test_verdict.py  test_virustotal.py
data/raw/: README.md  curated_benign_trusted_urls.csv
deliverables/: README.md  url-threat-checker-university-demo.pptx
docs/: architecture.md  code-reading-guide.md  completion-gap-analysis.md  demo-script.md  demo-setup.md  final-project-report.md  fresh-clone-test.md  handoff-package.md  model.md  retraining.md  security.md  telegram-integration-architecture.md  telegram-setup.md  training-data-audit.md  ui-testing-guide.md  virustotal.md
docs/features/: 2FA.md  HTTPS.md
docs/screenshots/: README.md
frontend/: next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx
frontend/src/components/: app-shell.tsx  (+3 more)
models/: model_card.json
scripts/: demo.sh
(+9 files in other folders)
