[project]
name = "url-threat-checker-backend"
version = "0.1.0"
description = "FastAPI backend for a hybrid URL threat checker."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.124.0",
  "httpx>=0.28.0",
  "pandas>=2.3.0",
  "pydantic>=2.13.0",
  "pydantic-settings>=2.12.0",
  "scikit-learn>=1.8.0",
  "skops>=0.13.0",
  "slowapi>=0.1.9",
  "pyotp>=2.9",
  "qrcode>=8.0",
  "sqlalchemy>=2.0.49",
  "tldextract>=5.3.0",
  "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
  "pytest>=9.0.0",
  "pytest-cov>=7.0.0",
  "ruff>=0.14.0",
]

[project.scripts]
train-model = "url_threat_checker.scripts.train_model:main"
hash-password = "url_threat_checker.scripts.hash_password:main"
seed-demo = "url_threat_checker.scripts.seed_demo:main"
reset-demo = "url_threat_checker.scripts.reset_demo:main"
validate-virustotal = "url_threat_checker.scripts.validate_virustotal:main"
create-submission-bundle = "url_threat_checker.scripts.create_submission_bundle:main"
setup-2fa = "url_threat_checker.scripts.setup_2fa:main"
telegram-webhook = "url_threat_checker.telegram.manage:main"

[tool.uv]
package = true

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
